<resources>
    <string name="app_name">FootballClub</string>
    <string name="team">Team</string>
    <string name="favorite">Favorite</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
